knetstats_DATA = theme0_none.png theme1_error.png theme2_both.png theme2_tx.png  theme3_rx.png theme4_none.png \
					  icon_pci.png theme0_rx.png theme1_none.png theme2_error.png theme3_both.png theme3_tx.png theme4_rx.png \
					  theme0_both.png theme0_tx.png theme1_rx.png theme2_none.png theme3_error.png theme4_both.png theme4_tx.png \
					  theme0_error.png theme1_both.png theme1_tx.png theme2_rx.png theme3_none.png theme4_error.png
knetstatsdir = $(kde_datadir)/knetstats/pics
